pkgs/sagemath-gsl: Move sage.probability here from passagemath-modules

--- a/pkgs/sagemath-gsl/MANIFEST.in
+++ b/pkgs/sagemath-gsl/MANIFEST.in
@@ -14,6 +14,8 @@ include sage/calculus/ode.p*
 include sage/calculus/riemann.p*
 graft sage/calculus/transforms
 
+graft sage/probability
+
 global-exclude all__sagemath_*.*
 global-include all__sagemath_gsl.py
 
