--- a/pkgs/sagemath-gsl/tox.ini
+++ b/pkgs/sagemath-gsl/tox.ini
@@ -69,7 +69,7 @@ commands =
     python -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.all__sagemath_gsl'
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_gsl --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS {posargs:sage/calculus}'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_gsl --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS {posargs:sage/calculus sage/probability}'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
