--- a/.github/workflows/dist-wheels-windows.yml
+++ b/.github/workflows/dist-wheels-windows.yml
@@ -446,6 +446,13 @@ jobs:
         with:
           package-dir: unpacked/passagemath_modules
 
+      - name: sagemath-gsl
+        id:   sagemath-gsl
+        if:   (success() || failure()) && steps.unpack.outcome == 'success'
+        uses: pypa/cibuildwheel@v3.3.0
+        with:
+          package-dir: unpacked/passagemath_gsl
+
       - name: sagemath-plot
         id:   sagemath-plot
         if:   (success() || failure()) && steps.unpack.outcome == 'success'
@@ -526,6 +533,7 @@ jobs:
          'sagemath-combinat',
          'sagemath-glpk',
          'sagemath-graphs',
+         'sagemath-gsl',
          'sagemath-homfly',
          'sagemath-modules',
          'sagemath-planarity',
