.github/workflows/ci-wheels.yml: Add passagemath-gsl

--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -71,6 +71,7 @@ jobs:
                             "sagemath-glucose",
                             "sagemath-graphs",
                             "sagemath-groups",
+                            "sagemath-gsl",
                             "sagemath-homfly",
                             "sagemath-kenzo",
                             "sagemath-kissat",
