pyproject.toml: Add comment

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,8 @@ dependencies = [
   'cython >=3.1.0,<3.3.0',
   'fpylll >=0.5.9; sys_platform != "win32"',
   'gmpy2 ~=2.1.b999',
+  # gmpy2 2.3 will be ABI-incompatible on Windows
+  # until we remove the patch imported from gmpy2 - https://github.com/gmpy2/gmpy2/pull/675
   'gmpy2 <2.3; sys_platform == "win32"',
   'ipykernel >=5.2.1',
   'ipython >=8.9.0',
