--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -72,6 +72,7 @@ jobs:
                             "sagemath-graphs",
                             "sagemath-groups",
                             "sagemath-gsl",
+                            "sagemath-highs",
                             "sagemath-homfly",
                             "sagemath-kenzo",
                             "sagemath-kissat",
