--- a/.github/workflows/dist-wheels-windows.yml
+++ b/.github/workflows/dist-wheels-windows.yml
@@ -409,6 +409,13 @@ jobs:
         with:
           package-dir: unpacked/passagemath_glpk
 
+      - name: sagemath-highs
+        id:   sagemath-highs
+        if:   (success() || failure()) && steps.unpack.outcome == 'success'
+        uses: pypa/cibuildwheel@v3.3.0
+        with:
+          package-dir: unpacked/passagemath_highs
+
       - name: sagemath-planarity
         id:   sagemath-planarity
         if:   (success() || failure()) && steps.unpack.outcome == 'success'
@@ -534,6 +541,7 @@ jobs:
          'sagemath-glpk',
          'sagemath-graphs',
          'sagemath-gsl',
+         'sagemath-highs',
          'sagemath-homfly',
          'sagemath-modules',
          'sagemath-planarity',
