--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -566,6 +566,12 @@ jobs:
         run: |
           ~/runner-venv/bin/python3 -m cibuildwheel unpacked/passagemath_glpk
 
+      - name: sagemath-highs
+        id:   sagemath-highs
+        if:   (success() || failure()) && steps.sagemath-categories.outcome == 'success'
+        run: |
+          ~/runner-venv/bin/python3 -m cibuildwheel unpacked/passagemath_highs
+
       - name: sagemath-homfly
         id:   sagemath-homfly
         if:   (success() || failure()) && steps.sagemath-categories.outcome == 'success'
