--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -29,7 +29,8 @@ permissions:
 
 jobs:
 
-  # standard (without ptest) for the default platform (used by build.yml etc.)
+  # default platform (used by build.yml etc.)
+
   default:
     uses: ./.github/workflows/docker.yml
     with:
@@ -39,13 +40,51 @@ jobs:
       extra_sage_packages: gdbm libxml2
       # FIXME: duplicated from env.TARGETS
       targets_pre: all-sage-local
-      targets: build sagemath_doc_html-build-deps
-      targets_optional: doc-html ptest-nodoc
+      targets: build doc-html
       tox_system_factors: >-
         ["ubuntu-noble"]
       tox_packages_factors: >-
         ["standard"]
       docker_push_repository: ghcr.io/${{ github.repository }}/
+      logs_artifact: false
+
+  default-optional:
+    if: ${{ success() || failure() }}
+    needs: [default]
+    uses: ./.github/workflows/docker.yml
+    with:
+      incremental: true
+      free_disk_space: true
+      from_docker_repository: ghcr.io/${{ github.repository }}/
+      from_docker_target: "with-targets"
+      tox_system_factors: >-
+        ["ubuntu-noble"]
+      tox_packages_factors: >-
+        ["standard"]
+      docker_targets: "with-targets-optional"
+      logs_artifact_suffix: "-optional"
+      extra_sage_packages: libxml2 graphviz
+      # We remove packages starting with _, in particular package _develop
+      targets_optional: '$(echo $(export PATH=build/bin:$PATH && sage-package list :optional: --has-file "spkg-install.in|spkg-install|requirements.txt" --no-file "huge|has_nonfree_dependencies" | grep -v sagemath_doc | grep -v ^_))'
+      logs_artifact: false
+
+  default-experimental:
+    if: ${{ success() || failure() }}
+    needs: [default]
+    uses: ./.github/workflows/docker.yml
+    with:
+      incremental: true
+      free_disk_space: true
+      from_docker_repository: ghcr.io/${{ github.repository }}/
+      from_docker_target: "with-targets"
+      tox_system_factors: >-
+        ["ubuntu-noble"]
+      tox_packages_factors: >-
+        ["standard"]
+      docker_targets: "with-targets-optional"
+      logs_artifact_suffix: "-experimental"
+      extra_sage_packages: libxml2 graphviz
+      targets_optional: '$(echo $(export PATH=build/bin:$PATH && sage-package list :experimental: --has-file "spkg-install.in|spkg-install|requirements.txt" --no-file "huge|has_nonfree_dependencies" | grep -v sagemath_doc))'
       logs_artifact: false
 
   # All platforms. This duplicates the default platform, but why not,
@@ -59,16 +98,28 @@ jobs:
       free_disk_space: true
       docker_targets: "with-system-packages configured with-targets-pre with-targets with-targets-optional"
       extra_sage_packages: gdbm libxml2
-      # FIXME: duplicated from env.TARGETS
       targets_pre: all-sage-local
-      targets: build sagemath_doc_html-build-deps
-      targets_optional: doc-html ptest-nodoc
+      targets: build doc-html
       tox_packages_factors: >-
           ["standard"]
       docker_push_repository: ghcr.io/${{ github.repository }}/
-      # Make sure that all "standard" jobs can start simultaneously,
-      # so that runners are available by the time that "default" starts.
       max_parallel: 16
+
+  standard-test:
+    if: ${{ success() || failure() }}
+    needs: [standard]
+    uses: ./.github/workflows/docker.yml
+    with:
+      incremental: true
+      free_disk_space: true
+      from_docker_repository: ghcr.io/${{ github.repository }}/
+      from_docker_target: "with-targets"
+      tox_packages_factors: >-
+          ["standard"]
+      docker_targets: "with-targets"
+      targets: ptestlong-nodoc
+      max_parallel: 16
+      logs_artifact: false
 
   minimal:
     if: ${{ success() || failure() }}
@@ -78,18 +129,30 @@ jobs:
       free_disk_space: true
       docker_targets: "with-system-packages configured with-targets-pre with-targets with-targets-optional"
       extra_sage_packages: gdbm libxml2
-      # FIXME: duplicated from env.TARGETS
       targets_pre: all-sage-local
-      targets: build sagemath_doc_html-build-deps
-      targets_optional: doc-html ptest-nodoc
+      targets: build doc-html
       tox_packages_factors: >-
           ["minimal"]
       docker_push_repository: ghcr.io/${{ github.repository }}/
-      # Reduced from 30 because it may run in parallel with 'standard' and 'standard-sitepackages' above.
-      # Calibrated for clogging the job pipeline until the "default" job has finished.
       max_parallel: 16
 
-  optional:
+  minimal-test:
+    if: ${{ success() || failure() }}
+    needs: [minimal]
+    uses: ./.github/workflows/docker.yml
+    with:
+      incremental: true
+      free_disk_space: true
+      from_docker_repository: ghcr.io/${{ github.repository }}/
+      from_docker_target: "with-targets"
+      tox_packages_factors: >-
+          ["minimal"]
+      docker_targets: "with-targets"
+      targets: ptestlong-nodoc
+      max_parallel: 16
+      logs_artifact: false
+
+  standard-optional:
     if: ${{ success() || failure() }}
     needs: [standard]
     uses: ./.github/workflows/docker.yml
@@ -102,14 +165,14 @@ jobs:
           ["standard"]
       docker_targets: "with-targets-optional"
       logs_artifact_suffix: "-optional"
-      extra_sage_packages: gdbm libxml2 graphviz
+      extra_sage_packages: libxml2 graphviz
       # We remove packages starting with _, in particular package _develop
       targets_optional: '$(echo $(export PATH=build/bin:$PATH && sage-package list :optional: --has-file "spkg-install.in|spkg-install|requirements.txt" --no-file "huge|has_nonfree_dependencies" | grep -v sagemath_doc | grep -v ^_))'
       max_parallel: 8
 
-  experimental:
+  standard-experimental:
     if: ${{ success() || failure() }}
-    needs: [optional]
+    needs: [standard-optional]
     uses: ./.github/workflows/docker.yml
     with:
       incremental: true
@@ -120,6 +183,6 @@ jobs:
           ["standard"]
       docker_targets: "with-targets-optional"
       logs_artifact_suffix: "-experimental"
-      extra_sage_packages: gdbm libxml2 graphviz
+      extra_sage_packages: libxml2 graphviz
       targets_optional: '$(echo $(export PATH=build/bin:$PATH && sage-package list :experimental: --has-file "spkg-install.in|spkg-install|requirements.txt" --no-file "huge|has_nonfree_dependencies" | grep -v sagemath_doc))'
       max_parallel: 8
