.github/workflows/ci-downstream-mingw.yml: Test -gsl, -highs

--- a/.github/workflows/ci-downstream-mingw.yml
+++ b/.github/workflows/ci-downstream-mingw.yml
@@ -35,6 +35,8 @@ jobs:
                             "sagemath-flint",
                             "sagemath-glpk",
                             "sagemath-graphs",
+                            "sagemath-gsl",
+                            "sagemath-highs",
                             "sagemath-homfly",
                             "sagemath-iml",
                             "sagemath-mcqd",
