Enable ruff rule to prevent attribute shadowing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -260,6 +260,10 @@ select = [
   # ruff-specific rules -- https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
   "RUF013",
   "RUF036",
+
+  # flake8-builtins
+  "A003",
+
   "TC", # flake8-type-checking - https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
   # pyupgrade -- https://docs.astral.sh/ruff/rules/#pyupgrade-up
   "UP004",
