pkgs/sagemath-symbolics: Make dep on maxima optional

--- a/pkgs/sagemath-symbolics/tox.ini
+++ b/pkgs/sagemath-symbolics/tox.ini
@@ -10,6 +10,7 @@
 envlist =
     sagepython-sagewheels-nopypi-norequirements-notest
     sagepython-sagewheels-nopypi-norequirements
+    sagepython-sagewheels-nopypi-norequirements-standard
 
 requires =
     # Auto-provision a modern tox.
@@ -56,7 +57,9 @@ setenv =                     {[pkgenv]setenv}
                              HOME={envdir}
     # Stop 'sage -t --installed' from picking up doc installed in SAGE_LOCAL
                              SAGE_DOC=/doesnotexist
-                             KNOWN_TEST_FAILURES={toxinidir}/known-test-failures.json
+    # Env factors for testing with extras
+    standard:                _STANDARD=--standard
+                             KNOWN_TEST_FAILURES={toxinidir}/known-test-failures{env:_STANDARD:}.json
     # See src/bin/sage-env
                              PYDEVD_DISABLE_FILE_VALIDATION=1
                              PYTHONUTF8=1
@@ -119,6 +122,11 @@ package_env = .pkg-sagepython
 basepython = {env:SAGE_VENV}/bin/python3
 package_env = .pkg-sagepython-sagewheels-nopypi
 
+[testenv:sagepython-sagewheels-nopypi-norequirements-standard]
+basepython = {env:SAGE_VENV}/bin/python3
+package_env = .pkg-sagepython-sagewheels-nopypi
+extras = test, standard
+
 [testenv:sagepython-sagewheels-nopypi-editable]
 basepython = {env:SAGE_VENV}/bin/python3
 package_env = .pkg-sagepython-sagewheels-nopypi-editable
@@ -126,3 +134,12 @@ package = editable
 deps = -r requirements-editable.txt
 config_settings_build_editable =
                              editable_mode = strict
+
+[testenv:sagepython-sagewheels-nopypi-editable-standard]
+basepython = {env:SAGE_VENV}/bin/python3
+package_env = .pkg-sagepython-sagewheels-nopypi-editable
+package = editable
+deps = -r requirements-editable.txt
+config_settings_build_editable =
+                             editable_mode = strict
+extras = test, standard
