pkgs/sagemath-lcalc: Activate testing

--- a/pkgs/sagemath-lcalc/tox.ini
+++ b/pkgs/sagemath-lcalc/tox.ini
@@ -67,9 +67,9 @@ allowlist_externals =
 commands =
     # Beware of the treacherous non-src layout. "./sage/" shadows the install sage package.
     {envpython} -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.libs.lcalc'
-    # Actual tests are disabled here for now because sagemath-glpk is (still) an install-requires of sagemath-polyhedra
-    # bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    #    && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_polyhedra --baseline-stats-path={toxinidir}/known-test-failures.json ./sage/numerical/backends/glpk*.pyx'
+
+    !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_lcalc --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage $SAGE_DOCTEST_OPTIONS {posargs:sage/lfunctions/lcalc.py sage/libs/lcalc sage/modular/dirichlet.py sage/schemes/elliptic_curves/ell_rational_field.py sage/schemes/elliptic_curves/lseries_ell.py}'
 
 
 [testenv:.tox]
