.github/workflows/ci-mingw.yml: Add passagemath-symbolics

--- a/.github/workflows/ci-mingw.yml
+++ b/.github/workflows/ci-mingw.yml
@@ -45,6 +45,7 @@ jobs:
         sagemath_polyhedra
         sagemath_rankwidth
         sagemath_sirocco
+        sagemath_symbolics
         sagemath_tdlib
       targets_optional: >-
         sagemath_bliss-check
@@ -130,6 +131,7 @@ jobs:
         sagemath_polyhedra
         sagemath_rankwidth
         sagemath_sirocco
+        sagemath_symbolics
         sagemath_tdlib
       targets_optional: >-
         sagemath_bliss-check
@@ -240,6 +242,7 @@ jobs:
         sagemath_polyhedra
         sagemath_rankwidth
         sagemath_sirocco
+        sagemath_symbolics
         sagemath_tdlib
       targets_optional: >-
         sagemath_bliss-check
